<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Echo</string>
    <string name="title_activity_device_setup">EchoBox WiFi Setup</string>
    <string name="title_activity_device_setup_progress">EchoBox WiFi Setup</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_settings">Echo</string>
    
    
    <!-- Menu Items -->
    <string name="menu_setup_device">Setup New Device</string>
    <string name="menu_audio_upload">Upload Audio Sample</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_notifications">Notifications</string>
    
    <!-- Device Setup -->
    <string name="dev_setup_b">Setup EchoBox!</string>
    <string name="dev_setup_refresh_b_desc">Refresh</string>
    <string name="dev_setup_net_sel">1. Select your Wireless Network</string>
    <string name="dev_setup_encr_sel">2. Select your network\'s security setting:</string>
    <string name="dev_setup_refresh">Refresh Networks</string>
    <string name="dev_setup_sec_sel">3. Enter your network\'s password:</string>
    <string name="dev_setup_description">EchoBox\'s WiFi must be configured upon initial setup or anytime the WiFi network it connects to changes.</string>
    
    <!-- Device Setup Progress -->
    <string name="dev_setup_prog_prompt">Please wait while your EchoBox is configured...</string>
    <string name="dev_setup_prog_error_hint">If setup hangs on this screen for more than 30 seconds reset your EchoBox and retry setup.</string>
    
    <!-- Device Setup Error Dialog -->
    <string name="dev_setup_error_dlg_prompt">Echo could not detect your EchoBox!\n\nPlease wait a few seconds for your phone to scan for EchoBox\'s WiFi network.</string>
    <string name="dev_setup_error_dlg_b_text">Try Again</string>
    <!-- Device Setup Progress Error Dialog -->
    <string name="dev_setup_prog_error_dlg_prompt">EchoBox setup encountered an error, please try again.</string>
    <string name="dev_setup_prog_error_dlg_b_text">Continue</string>
    
    
    <!-- Notification Screen -->
    <string name="notification_play_desc">Play</string>
    <string name="notification_delete">Delete</string>
    
    <!-- Settings -->
    <string name="settings_play_desc">Play</string>
    <string name="settings_toggle">Toggle</string>
    <string name="settings_delete">Delete</string>
    <string name="settings_toggle_all">Enable All Notifications</string>

    
    <!-- Add Audio Dialog Fragment -->
    <string name="audio_dlg_hint">Name the sound</string>
    <string name="audio_dlg_prompt">Enter a name for your sound.\n\nAfter pressing Ready, wait a few seconds then make the sound within range of your EchoBox.\n\nThe first loud sound your EchoBox hears will be recorded with this name.</string>
    <string name="audio_dlg_prompt2"></string>
    <string name="audio_dlg_cancel">Cancel</string>
    <string name="audio_dlg_ready">Ready</string>        
    
    <!-- Confirm Delete Framgment -->
    <string name="confirm_delete_prompt">Are you sure you want to delete?</string>
    
</resources>
    
    
    
    
    

    
    
    

