<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:echo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.cs.washington.cse477.SettingsActivity" >

    <item
        android:id="@+id/settings_action_refresh"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_refresh"
        echo:showAsAction="always"
        android:icon="@drawable/ic_action_refresh" />
    
    <item
        android:id="@+id/settings_action_add_sample"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_audio_upload"
        echo:showAsAction="always"/>
    
    <item
        android:id="@+id/settings_action_setup_device"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/menu_setup_device"/>
    
    <item
        android:id="@+id/settings_action_notifications"
        android:orderInCategory="1000"
        android:showAsAction="never"
        android:title="@string/menu_notifications"/>
    
</menu>